<resources>
    <string name="app_name">AturAja</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="open">Next</string>
    <string name="close">Previous</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="singup">Sign Up</string>
    <string name="already_have_account">Already have and account?</string>
    <string name="signin">Sign In</string>
    <string name="profil">Profil</string>
    <string name="setelan">Setelan</string>
    <string name="teman">Teman</string>
    <string name="tim">Tim</string>
    <string name="open_drawer">open</string>

    <string name="affirmation1">I am strong.</string>
    <string name="affirmation2">I believe in myself.</string>
    <string name="affirmation3">Each day is a new opportunity to grow.</string>

    <string-array name="notification">
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
    </string-array>

    <string-array name="repeat">
        <item>weekly</item>
        <item>monthly</item>
        <item>never</item>
    </string-array>

    <string-array name="priority">
        <item>none</item>
        <item>low</item>
        <item>medium</item>
        <item>high</item>
    </string-array>

    <string-array name="priority_number">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>