<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/profil"
        android:fontFamily="@font/mulish_regular"
        android:icon="@drawable/icon_profil"
        android:iconTint="#10D3B0"
        android:iconTintMode="screen"
        android:title="@string/profil" />
    <item android:id="@+id/setelan"
        android:fontFamily="@font/mulish_regular"
        android:icon="@drawable/icon_setting"
        android:title="@string/setelan" />
    <item android:id="@+id/teman"
        android:fontFamily="@font/mulish_regular"
        android:icon="@drawable/icon_teman"
        android:title="@string/teman" />
    <item android:id="@+id/tim"
        android:fontFamily="@font/mulish_regular"
        android:icon="@drawable/icon_tim"
        android:title="@string/tim" />
</menu>