<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F9FB"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/icon_aturaja"
            android:layout_width="182dp"
            android:layout_height="140dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right_signup"
            app:layout_constraintStart_toStartOf="@+id/guideline_left_add_schedule"
            app:layout_constraintTop_toTopOf="@+id/guideline_top_signup"
            app:srcCompat="@drawable/logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="25dp"
            app:layout_constraintEnd_toEndOf="@id/guideline_left_add_schedule"
            app:layout_constraintStart_toStartOf="@id/guideline_left_add_schedule"
            app:layout_constraintTop_toBottomOf="@id/icon_aturaja">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_input"
                android:drawableEnd="@drawable/ic_baseline_email_24"
                android:ems="10"
                android:fontFamily="@font/mulish_bold"
                android:hint="Username"
                android:inputType="textPersonName"
                android:paddingHorizontal="12dp"
                android:paddingVertical="14dp"
                android:textSize="16sp"
                app:boxStrokeColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="@id/guideline_left_add_schedule"
            app:layout_constraintStart_toStartOf="@id/guideline_left_add_schedule"
            app:layout_constraintTop_toBottomOf="@id/outlinedUsername">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_input"
                android:drawableEnd="@drawable/ic_baseline_email_24"
                android:ems="10"
                android:fontFamily="@font/mulish_bold"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:paddingHorizontal="12dp"
                android:paddingVertical="14dp"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="12dp"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="@id/guideline_left_add_schedule"
            app:layout_constraintStart_toStartOf="@id/guideline_left_add_schedule"
            app:layout_constraintTop_toBottomOf="@id/outlinedemail">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_input"
                android:ems="10"
                android:fontFamily="@font/mulish_bold"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingHorizontal="12dp"
                android:paddingVertical="14dp"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedconfirmpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="12dp"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="@id/guideline_left_add_schedule"
            app:layout_constraintStart_toStartOf="@id/guideline_left_add_schedule"
            app:layout_constraintTop_toBottomOf="@id/outlinedpassword">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_input"
                android:ems="10"
                android:fontFamily="@font/mulish_bold"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingHorizontal="12dp"
                android:paddingVertical="14dp"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phonenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="@id/guideline_left_add_schedule"
            app:layout_constraintStart_toStartOf="@id/guideline_left_add_schedule"
            app:layout_constraintTop_toBottomOf="@id/outlinedconfirmpassword">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_input"
                android:drawableEnd="@drawable/rotate"
                android:ems="10"
                android:fontFamily="@font/mulish_bold"
                android:hint="@string/phone_number"
                android:inputType="textPersonName"
                android:paddingHorizontal="12dp"
                android:paddingVertical="14dp"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/aturaja"
            android:fontFamily="@font/mulish_black"
            android:onClick="signUpClick"
            android:text="@string/singup"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_left_add_schedule"
            app:layout_constraintStart_toStartOf="@+id/guideline_left_add_schedule"
            app:layout_constraintTop_toBottomOf="@+id/phonenumber" />

        <TextView
            android:id="@+id/already_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/mulish_regular"
            android:text="@string/already_have_account"
            app:layout_constraintEnd_toStartOf="@+id/signin"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup" />

        <TextView
            android:id="@+id/signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/mulish_regular"
            android:onClick="signInCLick"
            android:text="@string/signin"
            android:textColor="@color/aturaja"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right_signup"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/already_have_account"
            app:layout_constraintTop_toBottomOf="@id/signup" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.11" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left_add_schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.13" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.87" />

    </androidx.constraintlayout.widget.ConstraintLayout>



<!--    <ScrollView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        tools:layout_editor_absoluteX="0dp"-->
<!--        tools:layout_editor_absoluteY="0dp">-->
<!--        -->
<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent">-->

<!--            -->
<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->
<!--    </ScrollView>-->
</ScrollView>